# improved-octo-fortnight

./: CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  pyproject.toml  zensical.toml
.github/scripts/: generate_index.py  override_site_url.py
.github/workflows/: changelog.yml  docs-dev.yml  docs-pr-build.yml  docs-pr-cleanup.yml  docs-pr-deploy.yml  docs-pr-preview.yml  docs-release.yml  docs.yml
0.2.1/: sitemap.xml
0.2.2/: index.html
0.2.2/markdown/: index.html
0.3.0/: 404.html  objects.inv  sitemap.xml
0.3.1/: 404.html  index.html
0.3.1/markdown/: index.html
0.3.2/: 404.html  index.html  sitemap.xml
0.3.2/api/: index.html
0.3.2/markdown/: index.html
dev/: 404.html  index.html  sitemap.xml
dev/api/: index.html
dev/markdown/: index.html
docs/: api.md  index.md
latest/: 404.html  index.html  sitemap.xml
latest/api/: index.html
latest/markdown/: index.html
pr/10/: 404.html  index.html  sitemap.xml
pr/11/: 404.html  index.html  sitemap.xml
pr/12/: 404.html  index.html  sitemap.xml
pr/13/: 404.html  index.html  sitemap.xml
pr/14/: 404.html  index.html  sitemap.xml
pr/15/: 404.html  index.html  sitemap.xml
pr/17/: 404.html  index.html  search.json  sitemap.xml
pr/18/: 404.html  index.html  sitemap.xml
pr/19/: 404.html  index.html  sitemap.xml
pr/20/: 404.html  index.html  sitemap.xml
pr/21/: 404.html  index.html  sitemap.xml
pr/22/: 404.html  index.html  sitemap.xml
pr/23/: 404.html  index.html  sitemap.xml
pr/24/: 404.html  index.html  sitemap.xml
pr/25/: 404.html  index.html  sitemap.xml
pr/26/: 404.html  (+3 more)
(+92 files in other folders)
